fixed score board on safari

--- a/app/components/score-board/score-board.component.less
+++ b/app/components/score-board/score-board.component.less
@@ -31,6 +31,7 @@
 
   &-data{
     width:350px;
+    min-width: 350px;
     height: 100%;
   }
 
